# Stackboard

./: README.md  Stackboard.cabal  stack.yaml
.stack-work/install/05480a1e/flag-cache/: Clipboard-2.3.1.0-3mZna2qd9sMFl4lwqFdQFt  MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  ansi-terminal-0.6.2.3-Az560Cs0ObY6ZODYjxtBiR  ansi-wl-pprint-0.6.7.3-DiRD02X4Bp4CayfqPjYmEo  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  bifunctors-5.4.1-LZeQTL0Uaws6v2aJY5STuc  cabal-helper-0.7.3.0-GgnMvw3xDqG5ig90b4nErY  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  comonad-5-BYydH82fZIS1vK4HJ9v9HH  contravariant-1.4-3UCY3arLvoG71jrGOYoc39  cpphs-1.20.4-4XwNO0S8wYFCjtdnoM9Yn6  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  djinn-ghc-0.0.2.3-5z85bZcLoZHKC4DwT3srQu  djinn-lib-0.0.1.2-4AmYn3IUBZ15IuinyTpUzc  either-4.4.1.1-LfywqNn0ru4HpzEGIB2pEg  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  extra-1.5.2-Kgnz1e8vSsaCyam5hxa7nS  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fclabels-2.0.3.2-4EezQlp7n1w9uoh5Y3yxAt  free-4.12.4-C89MffdE5zK8lCuYhh5BJR  ghc-mod-5.7.0.0-HPS4nYirRsYKiuDi3OjERB  ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  ghc-syb-utils-0.2.3-AUrnhzkH67L4pEUPWJ0CZJ  happy-1.19.5  hashable-1.2.6.0-BB722QoHyd0LwjaeyIINYc  haskell-src-exts-1.18.2-FdgZn6spuZY5gmAQFozK1k  hlint-1.9.41-JapyR1m5NZUGrHtNNc3pNw  mmorph-1.0.9-5bASEvmIkr5CpdAYXwPsn0  monad-control-1.0.1.0-LQwQ0Hi5p0oAccTfTzbfD5  monad-journal-0.7.2-FjNasKOWiM5C2RaJdHZMcF  old-locale-1.0.0.7-KGBP1BSKxH5GCm0LnZP04j  old-time-1.1.0.3-KWRsMSdY26c2L27Y9n9cyq  optparse-applicative-0.13.2.0-SWjmfay0WD4jZNxwNzmOL  (+19 more)
app/: Main.hs
(+24 files in other folders)
